Fixup `checkstyle` automation tradeoff with `PalantirJavaFormat`
Signed-off-by: Vincent Potucek <vpotucek@me.com>